--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 }
 
 :root {
-  /* --main-color: rgb(173, 255, 47); */
   --main-color: #9147ff;
 }
 
@@ -57,7 +56,6 @@ header{
   align-items: center;
   justify-content:space-between;
   background-color:  rgba(114, 114, 114, 0.5);
-  /* background-color:  rgb(128, 35, 250, 0.5); */
   backdrop-filter: blur(2.5px);
 }
 
@@ -140,14 +138,6 @@ header{
   width: 60%;
 }
 
-/* .text_title{
-  position: absolute;
-  z-index: 100;
-  top: 50%;
-  left: 10%;
-  transform: translate(-10%, -50%);
-} */
-
 .s1_text a h1{
   font-size: 7.5em;
   font-weight: 800;
@@ -180,17 +170,6 @@ header{
   /* font-family: ; */
   text-anchor: end;
 }
-
-/* .s1_buttons{
-  position: absolute;
-  z-index: 100;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 90%;
-  left: 20%;
-  transform: translate(-20%, -90%);
-} */
 
 .s1_buttons a{
   font-size: 3em;
@@ -254,36 +233,6 @@ header{
   transform: scale(0.40);
 }
 
-
-
-/* .social-media{
-  position: absolute;
-  z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  right: 2.5%;
-}
-
-.social-media a{
-  width: 100px;
-}
-
-
-.social-media li{
-  list-style: none;
-  width: 50px;
-  height: 50px;
-}
-
-.social-media li a{
-  transition: 0.5s;
-}
-
-.social-link:hover{
-  transform: scale(1.25) translateX(-0.5em);
-} */
-
 .social-media{
   position: absolute;
   bottom: 15%;
@@ -315,6 +264,7 @@ header{
   letter-spacing: 0.1em;
   font-size: 1.1em;
 }
+
 /*Section3 --------------------------------------------------------------------------------------- */
 
 .s3_div{
@@ -373,7 +323,7 @@ header{
   position: absolute;
   top: 33%;
   left: 10%;
-  width: 95vw;
+  width: 100vw;
   height: 100vh;
   transform: translate(-10%, -30%);
   display: flex;
@@ -382,13 +332,11 @@ header{
 }
 
 .subcontainers2 {
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-}
-
-.description {
-  margin-left: 5%;
+  padding: 0 7em;
 }
 
 .img{
@@ -400,6 +348,10 @@ header{
   font-size: 2em;
   padding: 0px 2em;
   margin: 2em 0;
+}
+
+.description{
+  padding-right: 7em;
 }
 
 .description h2 {
@@ -415,7 +367,8 @@ header{
   padding: 0px 2em;
   text-align: center;
   border-radius: 50px;
-  box-shadow: 0 25px 40px rgb(128, 35, 250, 0.2), 0px 0px 100px rgb(128, 35, 250, 0.2);
+  margin: 0 2em;
+  box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
 }
 
 .subcontainers2 h3{
@@ -561,6 +514,37 @@ header{
 }
 #inv_link_tele{
   display: none;
+  background-color: #29a5d8;
+}
+
+.subsubcontainers4 a{
+  font-size: 1em;
+  font-weight: 600;
+  padding: 0.5em;
+  color: white;
+  display: flex;
+  min-width: fit-content;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+
+.subsubcontainers4 a{text-decoration: none;}
+.subsubcontainers4 a:link{text-decoration: none; color: white;}
+.subsubcontainers4 a:visited{text-decoration: none; color: white;}
+.subsubcontainers4 a:hover{
+  color:white;
+  width: fit-content;
+  transform: scale(1.2);
+}
+
+.link_telegram{
+  display: flex;
+  min-width: 8em;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+  border-radius: 0.75em;
 }
 
 .social-links4:hover{
@@ -574,7 +558,6 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background: rgb(255, 255, 255); */
   background: linear-gradient(to bottom, rgb(187, 187, 187), white 20%);
   color: rgb(255, 255, 255);
   z-index: 10;
@@ -623,6 +606,8 @@ header{
 .footer_link:hover{color: rgb(81, 81, 81); height: 100%; font-size: 105%;}
 
 /*Responsive --------------------------------------------------------------------------------------------- */
+
+
 @media(max-width: 2440px){
   .s3_q2{
     top: 50%;
@@ -635,7 +620,26 @@ header{
     left: 75%;
     transform: translate(-75%, -50%);
   }
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 2em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 0 1.5em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
 
+}
+
+@media(max-width: 2315px){
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 1.5em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 0 1.5em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
 }
 
 @media(max-width: 2440px){
@@ -686,6 +690,15 @@ header{
   .s1_buttons{
     font-size: 0.5em;
   }
+  .subcontainers4 {
+    top: 75%;
+    transform: translate(0%, -75%);
+    height: 40%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 2% 5%;
+  }
 }
 
 
@@ -727,6 +740,25 @@ header{
     transform: translate(0%, -50%);
     margin-left: -20.5em;
   }
+
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 1.25em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 0 1.5em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1.75em;
+    padding: 0px 2em;
+    margin: 2em 0;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 2em;
+  }
+
 
 }
 
@@ -829,6 +861,36 @@ header{
   .roadmap_text{
     font-size: 1.75em;
   }
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 1.15em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 0 1.5em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1.75em;
+    padding: 0px 2em;
+    margin: 2em 0;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.5em;
+  }
+  .s2_img{
+    transform: scale(0.8);
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 3em 0 7em;
+  }
+  .description{
+    padding: 0;
+  }
 
 
 
@@ -903,6 +965,25 @@ header{
   }
   /* ------------------------------------------------------------------------------------------- */
 
+  .subcontainers4 {
+    top: 70%;
+    transform: translate(0%, -70%);
+    height: 35%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 2% 5%;
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 3em 0em 7em;
+  }
+  .s2_stats-container{
+    padding: 0 3em 3em 7em;
+  }
 }
 
 @media(max-width: 1515px){
@@ -942,6 +1023,36 @@ header{
     width: 60px;
     transform: translate(0, -100%);
   }
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 1em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 0 1.5em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1.75em;
+    padding: 0px 2em;
+    margin: 2em 0;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.5em;
+  }
+  .s2_img{
+    transform: scale(0.8);
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 3em 0 7em;
+  }
+  .description{
+    padding: 0;
+  }
   /* ------------------------------------------------------------------------------------------- */
 
   
@@ -969,6 +1080,36 @@ header{
   }
   #telegrams4{
     transform: scale(0.30);
+  }
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 1em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 0 1.5em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1.5em;
+    padding: 0px 2em;
+    margin: 2em 0;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.5em;
+  }
+  .s2_img{
+    transform: scale(0.8);
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 3em 0 7em;
+  }
+  .description{
+    padding: 0;
   }
 }
 
@@ -1031,9 +1172,55 @@ header{
   .social-media{
     transform: translate(5%, -50%);    
   }
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 0.9em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 0 1.5em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1.25em;
+    padding: 0px 2em;
+    margin: 2em 0;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.5em;
+  }
+  .s2_img{
+    transform: scale(0.8);
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 3em 0 7em;
+  }
+  .description{
+    padding: 0;
+  }
   /* ------------------------------------------------------------------------------------------- */
 
 }
+@media(max-height: 830px){
+  .subcontainers4 {
+    top: 70%;
+    transform: translate(0%, -70%);
+    height: 55%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 0 5%;
+    padding-top: 20%;
+  }
+  .s2_stats-container{
+    padding: 0 3em 3em 7em;
+  }
+}
+
 @media(max-height: 810px){
   #logo{
     transform: scale(0.15);
@@ -1095,7 +1282,48 @@ header{
     width: fit-content; 
   }
   /* ------------------------------------------------------------------------------------------- */
+  .subcontainers4 {
+    top: 70%;
+    transform: translate(0%, -70%);
+    height: 45%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 2% 5%;
+  }
+}
 
+@media(max-height: 740px){
+  .subcontainers4 {
+    top: 70%;
+    transform: translate(0%, -70%);
+    height: 60%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 0 5%;
+    padding-top: 20%;
+  }
+}
+
+
+@media(max-height: 670px){
+  .subcontainers4 {
+    top: 70%;
+    transform: translate(0%, -70%);
+    height: 70%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 0 5%;
+    padding-top: 20%;
+  }
+}
+
+@media(max-height: 670px){
+  .subsubcontainers4 a{
+    font-size: 0.7em;
+  }
 }
 
 @media(max-width: 1180px){
@@ -1143,6 +1371,45 @@ header{
     transform: translate(-40%, -50%);
     justify-content: space-between;
   }
+  
+}
+
+@media(max-width: 1180px){
+  
+  .text_cd, .text_lp, .text_sr {
+    font-size: 2em;
+    padding: 0px 2em;
+    margin: 2em 0;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.5em;
+  }
+  .s2_img{
+    display: none;
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 7em 0 7em;
+  }
+  .description{
+    padding: 0;
+  }
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 1.6em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 1em 1em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
+  .containers2{
+    justify-content: center;
+  }
 }
 
 @media(max-width: 1080px){
@@ -1160,10 +1427,35 @@ header{
     justify-content: space-between;
     display: none;
   }
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    font-size: 1.25em;
+    padding: 0px 2em;
+    text-align: center;
+    border-radius: 50px;
+    margin: 1em 1em;
+    box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+  }
   /* ------------------------------------------------------------------------------------------- */
 
 }
-
+@media(max-width: 930px){
+  .text_cp, .text_hodl, .text_sup, .text_mc {
+    display: none;
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 2.8em;
+    padding: 0px 2em;
+    margin: 2em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.5em;
+  }
+}
 
 
 @media(max-width: 900px){
@@ -1175,6 +1467,19 @@ header{
   }
   .s1_buttons{
     font-size: 0.8em;
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 2.5em;
+    padding: 0px 2em;
+    margin: 2em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.25em;
   }
   /* ------------------------------------------------------------------------------------------- */
 
@@ -1276,7 +1581,24 @@ header{
   }
   .social-medias4{
     justify-content: center;
-    width: 20$;
+    width: 20%;
+  }
+  #inv_link_tele{
+    z-index: 50;
+    display: block;
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 2.2em;
+    padding: 0px 2em;
+    margin: 2em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.25em;
   }
 }
 
@@ -1304,6 +1626,14 @@ header{
     font-size: 1.2em;
     font-weight: 600;
   }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 4em 0 4em;
+}
   /* ------------------------------------------------------------------------------------------- */
 
 }
@@ -1328,6 +1658,19 @@ header{
   .s3_div{
     padding: 1.5em 2em 2em 2em;
   }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1.75em;
+    padding: 0px 2em;
+    margin: 2em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.75em;
+  }
   /* ------------------------------------------------------------------------------------------- */
 
 }
@@ -1335,9 +1678,6 @@ header{
 @media(max-width: 485px){
   .s1_buttons{
     font-size: 0.7em;
-  }
-  .description{
-    display: none;
   }
 
   .logo{
@@ -1373,6 +1713,27 @@ header{
   .s3_div h2{
     font-size: 3.3em;
   }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1.5em;
+    padding: 0px 2em;
+    margin: 2em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.75em;
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2em 0 2em;
+}
   /* ------------------------------------------------------------------------------------------- */
 
 }
@@ -1496,6 +1857,27 @@ header{
   .roadmap_text{
     font-size: 0.75em;
   }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1.25em;
+    padding: 0px 2em;
+    margin: 2em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.5em;
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2em 0 2em;
+  }
   /* ------------------------------------------------------------------------------------------- */
 
 }
@@ -1543,6 +1925,27 @@ header{
   }
   .nav_bar a{
     margin: 0em 2em;
+  }
+  .text_cd, .text_lp, .text_sr {
+    font-size: 1em;
+    padding: 0px 2em;
+    margin: 2em 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .description h2 {
+    color: var(--main-color); 
+    font-size: 1.15em;
+  }
+  .subcontainers2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2em 0 2em;
   }
   /* ------------------------------------------------------------------------------------------- */
 
