--- a/style.css
+++ b/style.css
@@ -323,8 +323,8 @@ header{
   position: absolute;
   top: 33%;
   left: 10%;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   transform: translate(-10%, -30%);
   display: flex;
   flex-direction: column;
@@ -986,6 +986,7 @@ header{
   }
 }
 
+
 @media(max-width: 1515px){
   .subsubcontainers4 h3 {
     font-size: 0.8em;
@@ -1303,6 +1304,23 @@ header{
     margin-right: 2.5%;
     padding: 0 5%;
     padding-top: 20%;
+  }
+}
+
+@media(max-height: 700px){
+  .subcontainers4 {
+    position: absolute;
+    top: 20%;
+    transform: translate(0%, -20%);
+    display: flex;
+    height: 30%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 2% 5%;
+    align-items: center;
+    background-color: rgba(81, 81, 81, 0.65);
+    backdrop-filter: blur(6px);
   }
 }
 
@@ -1949,6 +1967,696 @@ header{
   }
   /* ------------------------------------------------------------------------------------------- */
 
+}
+
+/* CONCRETE RESOLUTIONS ------------------------------------------------------------- */
+
+@media(width: 2048px){
+  @media(height: 1080px){
+    .subcontainers4 {
+      position: absolute;
+      top: 75%;
+      transform: translate(0%, -75%);
+      display: flex;
+      height: 40%;
+      width: 95%;
+      margin-left: 2.5%;
+      margin-right: 2.5%;
+      padding: 2% 5%;
+      align-items: center;
+      background-color: rgba(81, 81, 81, 0.65);
+      backdrop-filter: blur(6px);
+    }
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 95%;
+      left: 10%;
+      transform: translate(-10%, -95%);
+      font-size: 0.75em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+  }
+}
+
+@media(width: 2048px){
+  @media(height: 1152px){
+    .subcontainers4 {
+      position: absolute;
+      top: 75%;
+      transform: translate(0%, -75%);
+      display: flex;
+      height: 35%;
+      width: 95%;
+      margin-left: 2.5%;
+      margin-right: 2.5%;
+      padding: 2% 5%;
+      align-items: center;
+      background-color: rgba(81, 81, 81, 0.65);
+      backdrop-filter: blur(6px);
+    }
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 95%;
+      left: 10%;
+      transform: translate(-10%, -95%);
+      font-size: 0.75em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+  }
+}
+
+@media(width: 1920px){
+  @media(height: 1200px){
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 95%;
+      left: 10%;
+      transform: translate(-10%, -95%);
+      font-size: 0.75em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+  }
+}
+
+@media(width: 1920px){
+  @media(height: 1080px){
+    .containers2{
+      position: absolute;
+      top: 33%;
+      left: 10%;
+      width: 100%;
+      height: 100%;
+      transform: translate(-10%, -30%);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-bottom: 5em;
+    }
+
+    .subcontainers4 {
+      position: absolute;
+      top: 75%;
+      transform: translate(0%, -75%);
+      display: flex;
+      height: 35%;
+      width: 95%;
+      margin-left: 2.5%;
+      margin-right: 2.5%;
+      padding: 2% 5%;
+      align-items: center;
+      background-color: rgba(81, 81, 81, 0.65);
+      backdrop-filter: blur(6px);
+    }
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 95%;
+      left: 10%;
+      transform: translate(-10%, -95%);
+      font-size: 0.75em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+  }
+}
+
+@media(width: 1280px){
+  @media(height: 1024px){
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 90%;
+      left: 10%;
+      transform: translate(-10%, -90%);
+      font-size: 0.7em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+    .social-media ul{
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 75%;
+      transform: translate(100%, -70%);
+    }
+    .s3_q2{
+      position: absolute;
+      top: 50%;
+      left: 0%;
+      transform: translate(-0%, -50%);
+      margin-left: 6.5em;
+    }
+    
+    .s3_q3{
+      position: absolute;
+      top: 50%;
+      right: 0%;
+      transform: translate(0%, -50%);
+      margin-left: 2em;
+    }
+    .s3_div{
+      height: fit-content;
+      width: 32em;
+    }
+  }
+}
+
+@media(width: 1366px){
+  @media(height: 768px){
+    .containers2{
+      position: absolute;
+      top: 33%;
+      left: 10%;
+      width: 100%;
+      height: 100%;
+      transform: translate(-10%, -30%);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-bottom: 5em;
+      padding-top: 5em;
+    }
+    .text_cd, .text_lp, .text_sr {
+      font-size: 1.5em;
+      padding: 0px 2em;
+      margin: 2em 0;
+    }
+    .s3_q2{
+      position: absolute;
+      top: 50%;
+      left: 0%;
+      transform: translate(-0%, -50%);
+      margin-left: 5em;
+    }
+    
+    .s3_q3{
+      position: absolute;
+      top: 50%;
+      right: 0%;
+      transform: translate(0%, -50%);
+      margin-left: -30em;
+    }
+    .s3_div{
+      height: fit-content;
+      width: 32.5em;
+    }
+  }
+}
+
+@media(max-width: 1290px){
+  .s3_div{
+    height: fit-content;
+  }
+}
+
+@media(width: 1280px){
+  @media(height: 720px){
+    .containers2{
+      position: absolute;
+      top: 33%;
+      left: 10%;
+      width: 100%;
+      height: 100%;
+      transform: translate(-10%, -30%);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-bottom: 5em;
+      padding-top: 5em;
+    }
+    .text_cd, .text_lp, .text_sr {
+      font-size: 1.3em;
+      padding: 0px 2em;
+      margin: 2em 0;
+    }
+
+    .subcontainers4 {
+      position: absolute;
+      top: 65%;
+      transform: translate(0%, -65%);
+      display: flex;
+      height: 50%;
+      width: 95%;
+      margin-left: 2.5%;
+      margin-right: 2.5%;
+      padding: 2% 5%;
+      align-items: center;
+      background-color: rgba(81, 81, 81, 0.65);
+      backdrop-filter: blur(6px);
+    }
+    .s3_q2{
+      position: absolute;
+      top: 50%;
+      left: 0%;
+      transform: translate(-0%, -50%);
+      margin-left: 7.5em;
+    }
+    
+    .s3_q3{
+      position: absolute;
+      top: 50%;
+      right: 0%;
+      transform: translate(0%, -50%);
+      margin-left: -30em;
+    }
+    .s3_div{
+      height: fit-content;
+      width: 32em;
+    }
+  }
+}
+
+@media(width: 1152px){
+  @media(height: 864px){
+    .containers2{
+      position: absolute;
+      top: 35%;
+      left: 10%;
+      width: 100%;
+      height: 80%;
+      transform: translate(-10%, -25%);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-bottom: 2em;
+      padding-top: 2em;
+    }
+    .subcontainers2 {
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 0 7em;
+    }
+    .text_cd, .text_lp, .text_sr {
+      font-size: 1.3em;
+      padding: 0px 2em;
+      margin: 0.4em 0;
+    }
+    .text_cp, .text_hodl, .text_sup, .text_mc {
+      font-size: 1em;
+      padding: 0px 2em;
+      text-align: center;
+      border-radius: 50px;
+      margin: 0.4 2em;
+      box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+    }
+    
+    .containers4{
+      position: absolute;
+      top: 33%;
+      left: 10%;
+      width: 100vw;
+      height: 100vh;
+      transform: translate(-10%, -30%);
+      justify-content: space-evenly;
+    }
+    .subcontainers4 {
+      position: absolute;
+      top: 75%;
+      transform: translate(0%, -75%);
+      display: flex;
+      height: 40%;
+      width: 95%;
+      margin-left: 2.5%;
+      margin-right: 2.5%;
+      padding: 2% 5%;
+      align-items: center;
+      background-color: rgba(81, 81, 81, 0.65);
+      backdrop-filter: blur(6px);
+    }
+    .subsubcontainers4 {
+      display: flex;
+      flex-direction: column;
+      font-size: 2.3em;
+      width: 100%;
+      height: 70%;
+      justify-content: space-evenly;
+      align-content: center;
+    }
+    .subsubcontainers4 div {
+      display: flex;
+      width: 100%;
+      padding: 0;
+      margin: 10px 0;
+      justify-content: space-evenly;
+    }
+
+
+    .s3_q2{
+      position: absolute;
+      top: 50%;
+      left: 0%;
+      transform: translate(-0%, -50%);
+      margin-left: 3em;
+    }
+    
+    .s3_q3{
+      position: absolute;
+      top: 50%;
+      right: 0%;
+      transform: translate(0%, -50%);
+      margin-left: -28em;
+    }
+    .s3_div{
+      height: fit-content;
+      width: 32em;
+    }
+  }
+}
+
+@media(width: 1024px){
+  @media(height: 768px){
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 77.5%;
+      left: 50%;
+      transform: translate(-50%, -77.5%);
+      font-size: 0.7em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+
+    .s3_q2{
+      position: absolute;
+      top: 50%;
+      left: 0%;
+      transform: translate(-0%, -50%);
+      margin-left: 3em;
+    }
+    .s3_q3{
+      position: absolute;
+      top: 50%;
+      right: 0%;
+      transform: translate(0%, -50%);
+      margin-left: -23em;
+    }
+    .s3_div{
+      height: fit-content;
+      width: 26em;
+    }
+
+    .containers2{
+      position: absolute;
+      top: 35%;
+      left: 10%;
+      width: 100%;
+      height: 80%;
+      transform: translate(-10%, -25%);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-bottom: 2em;
+      padding-top: 2em;
+    }
+    .subcontainers2 {
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 0 7em;
+    }
+    .text_cd, .text_lp, .text_sr {
+      font-size: 1.3em;
+      padding: 0px 2em;
+      margin: 0.5em 0;
+    }
+    .text_cp, .text_hodl, .text_sup, .text_mc {
+      font-size: 1em;
+      padding: 0px 2em;
+      text-align: center;
+      border-radius: 50px;
+      margin: 0.5 2em;
+      box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
+    }
+  }
+}
+@media(width: 850px){
+  @media(height: 480px){
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 85%;
+      left: 50%;
+      transform: translate(-50%, -85%);
+      font-size: 0.3em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+
+    .s3_q2{
+      position: absolute;
+      top: 80%;
+      left: 0%;
+      transform: translate(-0%, -80%);
+      margin-left: 3em;
+    }
+    
+    .s3_q3{
+      position: absolute;
+      top: 80%;
+      right: 0%;
+      transform: translate(0%, -80%);
+      margin-left: -18em;
+    }
+    .s3_div{
+      height: fit-content;
+      width: 20em;
+    }
+    .s3_div h2{
+      font-size: 2em;
+      line-height: 1.75em;
+      color: var(--main-color);
+      -webkit-text-stroke: 1px black;
+      text-shadow:
+          3px 3px 0 #000,
+          -1px -1px 0 #000,  
+          1px -1px 0 #000,
+          -1px 1px 0 #000,
+          1px 1px 0 #000;
+    }
+    
+    .roadmap_text{
+      font-size: 1em;
+      font: 1000;
+      line-height: 1.5em;
+      /* font-family: ; */
+    }
+  }
+}
+@media(width: 800px){
+  @media(height: 600px){
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 85%;
+      left: 50%;
+      transform: translate(-50%, -85%);
+      font-size: 0.3em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+
+    .s3_q2{
+      position: absolute;
+      top: 80%;
+      left: 0%;
+      transform: translate(-0%, -80%);
+      margin-left: 2em;
+    }
+    
+    .s3_q3{
+      position: absolute;
+      top: 80%;
+      right: 0%;
+      transform: translate(0%, -80%);
+      margin-left: -19.5em;
+    }
+    .s3_div{
+      height: fit-content;
+      width: 22em;
+    }
+    .s3_div h2{
+      font-size: 3em;
+      line-height: 1.75em;
+      color: var(--main-color);
+      -webkit-text-stroke: 1px black;
+      text-shadow:
+          3px 3px 0 #000,
+          -1px -1px 0 #000,  
+          1px -1px 0 #000,
+          -1px 1px 0 #000,
+          1px 1px 0 #000;
+    }
+    
+    .roadmap_text{
+      font-size: 1.2em;
+      font: 1000;
+      line-height: 1.5em;
+      /* font-family: ; */
+    }
+
+  }
+}
+@media(width: 720px){
+  @media(height: 360px){
+    .s1_buttons{
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      min-width: 5em;
+      align-items: center;
+      justify-content: center;
+      top: 85%;
+      left: 50%;
+      transform: translate(-50%, -85%);
+      font-size: 0.45em;
+      font-weight: 600;
+      padding: 0;
+      width: fit-content; 
+    }
+
+    .s3_q2{
+      position: absolute;
+      top: 80%;
+      left: 0%;
+      transform: translate(-0%, -80%);
+      margin-left: 2em;
+    }
+    
+    .s3_q3{
+      position: absolute;
+      top: 80%;
+      right: 0%;
+      transform: translate(0%, -80%);
+      margin-left: -19.5em;
+    }
+    .s3_div{
+      height: fit-content;
+      width: 22em;
+    }
+    .s3_div h2{
+      font-size: 2em;
+      line-height: 1.75em;
+      color: var(--main-color);
+      -webkit-text-stroke: 1px black;
+      text-shadow:
+          3px 3px 0 #000,
+          -1px -1px 0 #000,  
+          1px -1px 0 #000,
+          -1px 1px 0 #000,
+          1px 1px 0 #000;
+    }
+    
+    .roadmap_text{
+      font-size: 0.8em;
+      font: 1000;
+      line-height: 1.5em;
+      /* font-family: ; */
+    }
+  }
+}
+@media(width: 720px){
+  @media(height: 350px){
+
+  }
+}
+@media(width: 720px){
+  @media(height: 348px){
+
+  }
+}
+@media(width: 640px){
+  @media(height: 480px){
+
+  }
+}
+@media(width: 640px){
+  @media(height: 350px){
+
+  }
+}
+@media(width: 512px){
+  @media(height: 384px){
+
+  }
+}
+@media(width: 320px){
+  @media(height: 240px){
+
+  }
+}
+@media(width: 1680px){
+  @media(height: 1050px){
+
+  }
+}
+@media(width: 1280px){
+  @media(height: 720px){
+
+  }
+}
+@media(width: 1600px){
+  @media(height: 900px){
+
+  }
+}
+@media(width: 1280px){
+  @media(height: 720px){
+
+  }
+}
+@media(width: 1280px){
+  @media(height: 720px){
+
+  }
 }
 
 
