--- a/style.css
+++ b/style.css
@@ -295,20 +295,6 @@
   transition-delay: 1.5s;
 }
 
-/* Añadir esto en otro momento o resolución si eso */
-
-.social_media_text_span{
-  width: 80%;
-  height: 100%;
-  padding: 1% 1% 1% 10%;
-  position: relative;
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
-
-/* ---------------------------------------------- */
-
 .social_media-p{
   font-size: 1.5em;
   color: white;
@@ -321,6 +307,18 @@
   color: var(--main-color);
   font-size: 1em;
   transform: scale(1.3);
+}
+
+/* Añadir esto en otro momento o resolución si eso */
+
+.social_media_text_span{
+  width: 80%;
+  height: 100%;
+  padding: 1% 1% 1% 10%;
+  position: relative;
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Section 1: Home ----------------------------------------------------------*/
@@ -357,7 +355,7 @@
   height: 100%;
   background: black;
   opacity: 0.2;
-  mix-blend-mode: overlay;
+  /* mix-blend-mode: overlay; */
 }
 
 .s1_text{
@@ -372,12 +370,12 @@
 }
 
 .s1-text_titleName{
-  font-size: 5em;
+  font-size: 4em;
   font-weight: 800;
   line-height: 1.75em;
   letter-spacing: 0.085em;
   -webkit-text-stroke: 1px black;
-  transition: 1s;
+  transition: 0.75s;
   text-shadow:
       3px 3px 0 #000,
     -1px -1px 0 #000,  
@@ -387,12 +385,12 @@
 }
 
 .s1-text_titleName:hover{
-  font-size: 6em;
+  font-size: 4.5em;
 }
 
 .s1-text_description{
-  font-size: 1.75em;
-  line-height: 1.65em;
+  font-size: 1.5em;
+  line-height: 1.5em;
   text-anchor: end;
 }
 
@@ -402,20 +400,38 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 92.5%;
+  top: 93%;
   left: 10%;
-  transform: translate(-10%, -92.5%);
+  transform: translate(-10%, -93%);
 }
 
 #buy_button{
-  font-size: 2.5em;
+  font-size: 1.5em;
   font-weight: 600;
   padding: 0.75em;
   color: white;
-  transition: 0.3s;
+  transition: 0.75s;
   border: white;
   border-style: solid;
   border-radius: 0.8em;
+  background-color: rgba(71, 71, 71, 0.8);
+  backdrop-filter: blur(2px);
+}
+
+#buy_button:hover{
+  color: #9147ff;
+  border-color: #9147ff;
+  font-size: 1.75em;
+  border-width: 0.2em;
+  background-color: rgba(104, 104, 104, 0.8);
+  backdrop-filter: blur(1px);
+	box-shadow: 2px 2px 3px rgb(0, 0, 0);
+  text-shadow:
+      2px 2px 0 #000,
+    -1px -1px 0 #000,  
+     1px -1px 0 #000,
+     -1px 1px 0 #000,
+      1px 1px 0 #000;
 }
 
 /* Section 2: About ----------------------------------------------------------*/
