--- a/style.css
+++ b/style.css
@@ -532,7 +532,27 @@
 
 /* Section 3: Roadmap ----------------------------------------------------------*/
 
+.s3{
+  flex-direction: column;
+  align-items: center;
+}
 
+.s3-timeline_container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.s3-timeline_circle{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(50%, 50%);
+  border-radius: 100%;
+  background-color: black;
+  height: 4em;
+  width: 4em;
+}
 
 /* Section 4: Tokenomics ----------------------------------------------------------*/
 
